# validation/user-validation.js
@@ -2,12 +2,11 @@ const { body } = require('express-validator');
 
 const userValidationRules = () => {
   return [
-    body('isAdmin')
+    body('userType')
       .trim()
       .escape()
       .notEmpty()
-      .isBoolean()
-      .withMessage('Must be true or false'),
+      .isString()
   ];
 };
 
